--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.379.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
