--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-charts": "^7.6.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,7 +24,11 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -31,11 +36,14 @@
     "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.379.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "shadcn-ui": "^0.8.0",
     "slick-carousel": "^1.8.1",
